--- a/package-build/DEBIAN/control
+++ b/package-build/DEBIAN/control
@@ -4,6 +4,7 @@ Section: utils
 Priority: optional
 Architecture: all
 Depends: python3, python3-requests, python3-jinja2, python3-nmap
-Maintainer: Your Name <your.email@example.com>
+Maintainer: ICITIFY TECH <youremail@example.com>
 Description: Dark-Map — Nmap wrapper and automation framework
- Dark-Map is a nmap wrapper with presets, plugins, TUI and web frontend.
+ Dark-Map is a powerful wrapper around Nmap, with presets, plugins,
+ TUI, dynamic welcome, and optional HTML/CSV reporting. Use responsibly.
